[project]
name = "faq-rag-llmzc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.8.0",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.1.0",
]
